review cleanup, fix scroll overflow for firefox

--- a/airbyte-webapp/src/components/connection/CatalogTree/CatalogTreeBody.module.scss
+++ b/airbyte-webapp/src/components/connection/CatalogTree/CatalogTreeBody.module.scss
@@ -1,7 +1,7 @@
 .container {
   margin-bottom: 29px;
   max-height: 600px;
-  overflow-y: overlay;
+  overflow-y: auto;
 
   --webkit-overlay: true;
 
