--- a/airbyte-webapp/src/views/Connection/ConnectionForm/components/SyncCatalogField.module.scss
+++ b/airbyte-webapp/src/views/Connection/ConnectionForm/components/SyncCatalogField.module.scss
@@ -9,5 +9,5 @@
   font-weight: 500;
   font-size: 14px;
   line-height: 17px;
-  padding: variables.$spacing-xl;
+  padding: variables.$spacing-md variables.$spacing-xl;
 }
